update 4 filter options
This change was to have three options with just the filters showing
(top left or right).

--- a/home-3.html
+++ b/home-3.html
@@ -45,21 +45,21 @@
 			   </li>
 			   <li class="divider"></li>
 			   <li class="has-form">
-		        <a href="index.html" class="small button ">Overview</a>
+		        	<a href="index.html" class="small button ">Overview</a>
 		    	</li>
-			   <li class="has-form">
-        <a href="home-2.html" class="small button">Left Link</a>
-    	</li>
-    	<li class="has-form">
-        <a href="home-3.html" class="small button">Right Link Simple</a>
-    	</li>
-    	<li class="has-form">
-        <a href="home.html" class="small button">Right Link Extras</a>
-    	</li>
+		    	<li class="has-form">
+		        	<a href="home.html" class="small button">Top Filters</a>
+		    	</li>
+		    	<li class="has-form">
+		        	<a href="home-2.html" class="small button">Right Side Filters</a>
+		    	</li>
+		    	<li class="has-form">
+		        	<a href="home-3.html" class="small button alert">Left Side Filters</a>
+		    	</li>
 
 			</ul>
 
-			</section>
+		  </section>
 
 			<section class="top-bar-section">
 			    <!-- Right Nav Section -->
@@ -336,6 +336,7 @@
 
 			    <!-- Nav Section -->
 			    <ul class="left">
+			      <li class="active my-commons"><a href="#">My Commons</a></li>
 			      <li><a href="#">Home</a></li>
 			      <li><a href="#">People</a></li>
 			      <li><a href="#">Groups</a></li>
@@ -345,10 +346,10 @@
 			      <li><a href="#">Help</a></li>
 			      <li><a href="#">About</a></li>
 			    </ul>
-
+<!--
 			    <ul class="right">
-			    	<li class="active my-commons"><a href="#">My Commons</a></li>
-			    </ul>
+
+			    </ul> -->
 			  </section>
 		  </nav>
 		</div>
@@ -356,59 +357,38 @@
 	</div><!-- end header -->
 </div>
 	<!-- Begin Page Specific Markup -->
+
+
 	<div class="row content">
 
-		<!-- begin main content area -->
-		<div class="small-12 medium-8 columns">
+		<!-- begin side area -->
+		<div class="small-12 medium-2 columns">
+			<div class="side-content">
+				<!-- <h2>Christopher Stein</h2> -->
+				
+				<nav>
+					<ul class="side-nav">
+						<li class="heading">SHOW: </li>
+						<li><a href="#" class="selected" id="everything">Everything</a></li>
+  						<li><a href="#" id="groups">Groups</a></li>
+						<li><a href="#" id="sites">Sites</li>
+						<li><a href="#" id="friends">Friends</a></li>
 
-			<!-- <div class="quick-links">
-					<ul class="links">
-					  <li><a href="#"><button class="tiny expand">Profile</button></a></li>
-					  <li><a href="#"><button class="tiny expand">Messages</button></a></li>
-					  <li><a href="#"><button class="tiny expand">Sites</button></a></li>
-					  <li><a href="#"><button class="tiny expand">Groups</button></a></li>
-					  <li><a href="#"><button class="tiny expand">Invites</button></a></li>
-					  <li><a href="#"><button class="tiny expand">Friends</button></a></li>
 					</ul>
-			</div> --> <!-- end quick-links -->
+				</nav>
+
+
+
+			</div>
+		</div>
+		<!-- end side area -->
+
+		<!-- begin main content area -->
+		<div class="small-12 medium-10 columns">
 
 
 			<div class="commons-content">
 
-
-				<div class="row">
-				<div class="small-12 columns">
-						<header id="my-activity">
-							<!-- <h2 >My Activity</h2> -->
-							<!-- <p>showing what's happening realted to you</p> -->
-						</header>
-
-					</div>
-					<!-- <div class="small-12 medium-5 columns">
-						<header id="my-activity">
-							<h2 >My Activity</h2>
-						</header>
-
-					</div> -->
-					<!-- <div class="small-12 medium-7 columns">
-						<div class="row">
-						    <div class="large-12 columns">
-								<form action="" id="activity-filter">
-							      <label>Filter My Activity By
-							        <select>
-							          <option value="all">All (unfiltered)</option>
-							          <option value="groups">Groups</option>
-							          <option value="blogs">Blogs</option>
-							          <option value="friends">Friends</option>
-							          <option value="personal">Personal</option>
-							        </select>
-							      </label>
-							    </form>
-						    </div>
-						</div>
-					</div> -->
-
-				</div> <!-- end row -->
 
 
 				<ul id="activity-stream" class="activity-list item-list">
@@ -1075,81 +1055,7 @@
 		</div>
 		<!-- end main content area -->
 
-		<!-- begin side area -->
-		<div class="small-12 medium-4 columns">
-			<div class="side-content">
-				<!-- <h2>Christopher Stein</h2> -->
-
-
-
-				<nav>
-					<ul class="side-nav">
-						<li class="heading">SHOW: </li>
-						<li><a href="#" class="selected" id="everything">Everything</a></li>
-  						<li><a href="#" id="groups">Groups</a></li>
-						<li><a href="#" id="sites">Sites</li>
-						<li><a href="#" id="friends">Friends</a></li>
-
-					</ul>
-				</nav>
-
-
-				<div class="commons-card" id="commons-information">
-					<h4>Commons Information</h4>
-					<div class="commons-info">
-						<img src="http://placehold.it/300x100" alt="">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. </p>
-						<p class="viewmore"><a href="#">view more</a></p>
-					</div>
-				</div>
-				<!-- end commons card who's online -->
-
-				<!-- <div class="divider"></div> -->
-
-				<div class="commons-card" id="following">
-					<h4>You're Following</h4>
-					<ul class="following">
-						<li><a href="#">Helldriver's Pitstop</a></li>
-						<li><a href="#">CUNY Academic Commons Development Blog</a></li>
-						<li><a href="#">Digital Praxis Seminar Fall 2014 - Spring 2015</a></li>
-						<li><a href="#">CUNY Games Network</a></li>
-						<li><a href="#">CUNY Pie</a></li>
-					</ul>
-				</div>
-
-				<div class="commons-card" id="active-groups">
-					<h4>Your Active Groups</h4>
-					<ul class="following">
-						<li><a href="#">BMCC MEA Department</a></li>
-						<li><a href="#">CUNY Academic Commons Team</a></li>
-						<li><a href="#">CUNY Committee on Academic Technology</a></li>
-						<li><a href="#">CUNY Games Network</a></li>
-
-					</ul>
-				</div>
-
-				<div class="commons-card" id="whos-online">
-					<h4>Who's Online?</h4>
-					<div class="whos-online">
-						<ul class="thumbs">
-						  <li><img src="http://placehold.it/100x100" alt=""></li>
-						  <li><img src="http://placehold.it/100x100" alt=""></li>
-						  <li><img src="http://placehold.it/100x100" alt=""></li>
-						  <li><img src="http://placehold.it/100x100" alt=""></li>
-						  <li><img src="http://placehold.it/100x100" alt=""></li>
-						  <li><img src="http://placehold.it/100x100" alt=""></li>
-						</ul>
-
-					</div>
-				</div>
-				<!-- end commons card who's online -->
-
-			</div>
-		</div>
-		<!-- end side area -->
+		
 
 	</div>
 	<!-- End Page Specific Markup -->
