--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <a href="index.html" class="small button alert">Overview</a>
     	</li>
     	<li class="has-form">
-        <a href="home-2.html" class="small button">Left Link</a>
+        <a href="home.html" class="small button">Top Filters</a>
     	</li>
     	<li class="has-form">
-        <a href="home-3.html" class="small button">Right Link Simple</a>
+        <a href="home-2.html" class="small button">Right Side Filters</a>
     	</li>
     	<li class="has-form">
-        <a href="home.html" class="small button">Right Link Extras</a>
+        <a href="home-3.html" class="small button">Left Side Filters</a>
     	</li>
 
 
@@ -368,30 +368,16 @@
 
 <div class="row content">
 	<div class="small-12 medium-6 columns">
-	<h3>Update 3:</h3>
-	<p>In the Friday 8.29.14 meeting we decided to greatly simplify the Personal Homepage. The basic idea was top keep the page to just showing activity related to the person and filter it by Groups, Sites and Friends. We also decided that a new navigational item would be added to the main Commons nav (and that the home link would take you to the current homepage). We did not reach a consensus about where that new nav should be. The following examples show a couple of options:</p>
+	<h3>Update 4:</h3>
+	<p>In the Wednesday 9.3.14 Commons Team meeting we decided to narrow the choices by removing everything except the filters and looking at three different placements of the filters:</p>
 	<!-- <p> <a href="home.html">Personal Homepage</a> </p> -->
 
 	<ol>
-	<li><a href="home-2.html">Left Link + horizontal filters</a></li>
-		<li><a href="home-3.html">Right Link Simple</a></li>
-		<li><a href="home.html">Right Link Matching Color + extras</a></li>
+	<li><a href="home.html">Filters on the Top</a></li>
+		<li><a href="home-3.html">Filters on Right Side</a></li>
+		<li><a href="home.html">Filters on Left Side</a></li>
 
 	</ol>
-
-	<p>I didn't have time to refine these more or give a single option. On all of them the filters work and also have a matching "more" information as follows:</p>
-	<ul>
-		<li>Everything: Commons Info</li>
-		<li>Groups: Recently Active Groups (of yours)</li>
-		<li>Sites: Following</li>
-		<li>Friends: Who's Online (of your friends)</li>
-	</ul>
-
-	<p>Use the Blue buttons at the very top of these pages to navigate between options.</p>
-
-	<p>We didn't talk about this functionality and it would add more for the dev team. It could just be one or more or none at all times. I will do more thinking and I'm open to suggestions.</p>
-
-	<p>In the second example with the extras I also added some quick links as a possible less obtrusive way to add links to other pages.</p>
 	</div>
 </div>
 
