modified instructions for navigating between versions.

--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@
 		<li><a href="home.html">Filters on Left Side</a></li>
 
 	</ol>
+
+	<p>You can navigate between options with the blue buttons at the top. I used some of the same file names so refresh your browser if it looks like the previous version.</p>
 	</div>
 </div>
 
