updating styling of text in activity items

--- a/home.html
+++ b/home.html
@@ -449,7 +449,7 @@
 								</div>
 
 								<div class="activity-time">
-									<p><a href="http://apicciano.commons.gc.cuny.edu/?p=9886" class="view activity-time-since" title="View Discussion"><span class="time-since">17 hrs, 39 mins ago</span></a></p>
+									<p><span class="time-since">17 hrs, 39 mins ago</span></p>
 								</div>
 
 								<div class="activity-description">
@@ -490,7 +490,7 @@
 									<a href="http://commons.gc.cuny.edu/members/cstein/" title="Christopher Stein">Christopher Stein</a>
 								</div>
 								<div class="activity-time">
-									<p><a href="http://commons.gc.cuny.edu/activity/p/276551/" class="view activity-time-since" title="View Discussion"><span class="time-since">5 days, 21 hours ago</span></a></p>
+									<p><span class="time-since">5 days, 21 hours ago</span></p>
 								</div>
 								<div class="activity-description">
 									<p> edited <a href="http://commons.gc.cuny.edu/groups/cac-community-team-project-planning/docs/cac-comm-team-task-board">CAC Comm Team – Task Board</a> in <a href="http://commons.gc.cuny.edu/groups/cac-community-team-project-planning/">CUNY Academic Commons Team</a> </p>
@@ -582,7 +582,7 @@
 								<div class="actor-name"><a href="http://commons.gc.cuny.edu/members/helldriver/" title="helldriver">helldriver</a></div>
 								<div class="activity-time">
 									<p>
-										<a href="http://helldriver.commons.gc.cuny.edu/?p=586" class="view activity-time-since" title="View Discussion"><span class="time-since">1 day, 12 hours ago</span></a>
+										<span class="time-since">1 day, 12 hours ago</span>
 									</p>
 								</div>
 								<div class="activity-description">
